Fixed spectrogram on safari

--- a/Piano-App-jsRapPiano/static/index.css
+++ b/Piano-App-jsRapPiano/static/index.css
@@ -183,7 +183,6 @@ audio:focus {
     flex-wrap: wrap; */
     background-color: white;
     position: relative;
-    left: 50px;
     z-index: -1;
 }
 
@@ -191,12 +190,12 @@ audio:focus {
     /* display: flex;
     flex-wrap: wrap; */
     position: relative;
-    left: 50px;
+
     z-index: -1;
 }
 
 img {
-    border-radius: 2px;
+    border-radius: 3px;
     width: 100%;
     height: 100%;
     z-index: -1;
